k8s/mongo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongo
  namespace: mern-app
  labels:
    app: mongo
spec:
  containers:
    - name: mongo
      image: mongo:latest
      ports:
        - containerPort: 27017
