k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: mern-app
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 5050
      targetPort: 5050
      nodePort: 30007
